<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".auth.preview.LoginPreviewFragment">

    <TextView
        style="@style/LoginSectionTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preview_header" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:src="@mipmap/preview_banner_foreground" />

    <Button
        android:id="@+id/loginButton"
        style="@style/RoundCornersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:text="@string/login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="center"
        android:text="@string/no_account"
        android:textColor="#999999"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="#64cbdc"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>